[gd_scene load_steps=7 format=3 uid="uid://cyv8vf7k1e1s4"]

[ext_resource type="Texture2D" uid="uid://drb5pvhu3wopb" path="res://Media/images/example_doctor.jpg" id="1_iup1h"]
[ext_resource type="Script" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/ActionContainer/parts/researcher_detail_item.gd" id="1_jguvo"]
[ext_resource type="LabelSettings" uid="uid://bhvjm3opd1txx" path="res://Fonts/game/label_small.tres" id="2_8kqvs"]
[ext_resource type="PackedScene" uid="uid://cudqhv3d68cen" path="res://Scenes/TrainingProgram/parts/GameplayLoop/parts/ActionContainer/parts/ResearcherDetailLineItem.tscn" id="4_fpomo"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dwfri"]
bg_color = Color(1, 0.339692, 0.306841, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_aud1r"]
bg_color = Color(0, 0, 0, 0.560784)

[node name="PanelContainer" type="PanelContainer"]
custom_minimum_size = Vector2(250, 0)
offset_right = 373.0
offset_bottom = 36.0
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxFlat_dwfri")
script = ExtResource("1_jguvo")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 0

[node name="Portrait" type="TextureRect" parent="HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
texture = ExtResource("1_iup1h")
expand_mode = 1
stretch_mode = 6

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_aud1r")

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/PanelContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="TitleLabel" type="Label" parent="HBoxContainer/VBoxContainer/PanelContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "RESEARCHER NAME"
label_settings = ExtResource("2_8kqvs")
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="DetailList" type="VBoxContainer" parent="HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 5

[node name="ResearcherDetailLineItem" parent="HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/DetailList" instance=ExtResource("4_fpomo")]
layout_mode = 2

[node name="ResearcherDetailLineItem2" parent="HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/DetailList" instance=ExtResource("4_fpomo")]
layout_mode = 2

[node name="ResearcherDetailLineItem3" parent="HBoxContainer/VBoxContainer/MarginContainer/HBoxContainer/DetailList" instance=ExtResource("4_fpomo")]
layout_mode = 2
